# NullA

./: .gitignore  LINK.md  README.md  main.py  main.spec  requirments.txt  setup.cfg  setup.py
hooks/: hook-mediapipe.py
nulla/: __factory_util__.py  download.py  error.py  factory.py  typer.py  util.py
nulla/gui/: App.py  EmptyMonitor.py  KivyWidgetAPI.py  ModelSelector.py  Monitor.py  MonitorInfo.py  Root.py  __init__.py
nulla/logic/: backend.py  cv2_to_kivy.py  cy_fps_counter.pyx  fps_counter.py  player.py
nulla/meta/: create_ml_map.py
nulla/ml/: base.py
nulla/ml/audio/whisper/: transribe_mic.py
nulla/ml/mediapipe/: face_blend.py  face_cover.py  face_detection.py  facemesh.py  hand.py  pose.py  selfie_segmentation.py
nulla/ml/mediapipes/: face_blend.py  face_cover.py
nulla/ml/onnx/: __init__.py  age.py  fer.py  gender.py
nulla/ml/opencv/: barcode.py  poisson_blend.py
nulla/res/: __init__.py  empty_monitor.kv  model_selector.kv  monitor.kv  monitor_info.kv  root.kv
shell/: build_win.bat  clear_pyd.bat
src/gui/: App.py
src/logic/: backend.py  fps_counter.py
src/res/: __init__.py  monitor.kv
tests/: test_download.py  test_fer.py
