[metadata]
name = example-package-YOUR-USERNAME-HERE
version = 0.0.1
author = Okubo Shigemasa
author_email = ginger.os777146th@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
;package_dir =
packages = find:
python_requires = >=3.6
install_requires =
    Cython ==0.29.30
    kivy == 2.1.0
    loguru == 0.6.0
    opencv-contrib-python== 4.5.5.62
    pyinstaller == 4.1.0
    rx ==3.2.0



[options.packages.find]
where = src